Add guess button

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PixelSketch</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="js-file.js" defer></script>
 </head>
 <body>
 
     
-    <h1>My Etch-a-Sketch</h1>
+    <h1>PixelSketch</h1>
     <div class = "container">
         <div class = "grid-container">
             <h2 style = "text-align: center">Let's Draw!</h2>
@@ -31,13 +31,11 @@
 
             <button id = 'drawMode'>Draw Mode</button>
             <button id = 'rainbow'>Rainbow Mode</button>
-            <button id = 'darken'>Darken Mode</button>
-
-            
-
             <button id = 'eraser'>Eraser</button>
             <button id = 'clear'>Clear Grid</button>
             <button id = 'addLines'>Add Gridlines</button>
+            <button id = 'guessDraw!'>Guess Drawing!</button>
+
 
 
 
