--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <button id = 'clear'>Clear Grid</button>
             <button id = 'addLines'>Add Gridlines</button>
             <button id = 'guessDraw'>Guess Drawing!</button>
+            <div id="guessResult"></div>
         </div>
     </div>
 </body>
