--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
 <body>
 
     
-    <h1>Pixel Sketch</h1>
+    <h1>Pixel Fruit</h1>
 
     <div class = "container">
         <div class = "ai-container">
